edit(rename): rename the package to ImageSequenceAnnotationRecipes

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,7 +1,7 @@
-@misc{ANT.jl,
+@misc{ImageSequenceAnnotationRecipes.jl,
 	author  = {Martin Kunz <martinkunz@email.cz> and contributors},
-	title   = {ANT.jl},
-	url     = {https://github.com/kunzaatko/ANT.jl},
+	title   = {ImageSequenceAnnotationRecipes.jl},
+	url     = {https://github.com/kunzaatko/ImageSequenceAnnotationRecipes.jl},
 	version = {v0.1.0},
 	year    = {2022},
 	month   = {4}
